# gtk-llm-chat

./: .env.ci  .gitignore  .pylintrc  CLAUDE.md  README.md  REFACTOR_PLAN.md  build-ci.py  build-standalone-pyinstaller.spec  build.py  build.spec  compile_po.sh  debug_icons.sh  gtk3_porting_plan.md  main.spec  numpy_python313_patch.py  prompt_plan.md  pyproject.toml  requirements.txt  review_changes.py  setup.cfg  setup.py  todo.md  welcome.py
ai-specs/: README.md
desktop/: gtk-llm-applet.desktop  gtk-llm-chat.desktop  install-dev.sh
docs/: architecture.md  base-standards.md  branch-inventory.md  data-model.md  development-guide.md  roadmap.md  xmpp-client-behavior.md
gtk_llm_chat/: __main__.py  agent_commands_sidebar.py  audio_player.py  audio_utils.py  chat_application.py  chat_backend.py  chat_roster_sidebar.py  chat_sidebar.py  chat_type_picker.py  chat_window.py  db_operations.py  dbus_client.py  dbus_service.py  debug_utils.py  gtk-llm-applet.py  gtk_llm_applet.py  gtk_llm_chat.py  ipc_client.py  llm_client.py  llm_conversation_sidebar.py  llm_gui.py  llm_process.py  main.py  markdown_view.py  markdownview.py  model_selection.py  model_selector.py  pango_markdown.py  platform_utils.py  python313_compatibility.py  resource_manager.py  style_manager.py  tk_llm_applet.py  tray_applet.py  voice_recorder.py  welcome.py  wide_model_selector.py  widgets.py  xmpp_account.py  xmpp_account_dialog.py  (+7 more)
hooks/: hook-llm_groq.py  hook-llm_register_models.py  rthook_numpy_python313.py
linux/: bootstrap.sh  org.fuentelibre.gtk_llm_Chat.appdata.xml  (+1 more)
macos/: bootstrap.sh  (+1 more)
(+99 files in other folders)
